--- a/ai-counsellor-backend/package.json
+++ b/ai-counsellor-backend/package.json
@@ -5,11 +5,11 @@
   "license": "ISC",
   "author": "",
   "type": "module",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "seed": "node src/seed/seedUniversities.js"
   },
   "dependencies": {
